# midas-journal-742

ResampleDTIInsightJournal/: CMakeLists.txt
ResampleDTIInsightJournal/Document/LaTeX/: ArticleExample.aux  ArticleExample.bbl  ArticleExample.blg  ArticleExample.brf  ArticleExample.dvi  ArticleExample.out  ArticleExample.ps  ArticleExample.tex  ArticleExample.toc  InsightJournal.bib  Makefile
ResampleDTIInsightJournal/GenerateCLPDirectory/ModuleDescriptionParser/: ModuleDescription.cxx  ModuleDescription.h  ModuleDescriptionParser.cxx  ModuleDescriptionParser.h  ModuleDescriptionParserWin32Header.h  ModuleFactory.cxx  ModuleFactory.h  ModuleParameter.cxx  ModuleParameter.h  ModuleParameterGroup.cxx  ModuleParameterGroup.h  ModuleProcessInformation.cxx  ModuleProcessInformation.h
ResampleDTIInsightJournal/GenerateCLPDirectory/ModuleDescriptionParser/Testing/: Parser1Test.cxx
ResampleDTIInsightJournal/Source/: CMakeLists.txt  ResampleDTI.cxx  ResampleDTI.xml
ResampleDTIInsightJournal/Source/Testing/: CMakeLists.txt~
ResampleDTIInsightJournal/Source/Testing/TestData/: dt-helix-ref-Log.nrrd
ResampleDTIInsightJournal/Source/dtiprocessFiles/: itkDeformationFieldToHFieldImageFilter.h~  itkDeformationFieldToHFieldImageFilter.txx  itkDeformationFieldToHFieldImageFilter.txx~
